--- a/pages/bookSearch/index.wxml
+++ b/pages/bookSearch/index.wxml
@@ -24,9 +24,7 @@
           <image class="bookImg" src="{{item.images.small}}" />
         </view>
         <view class="weui-media-box__bd weui-media-box__bd_in-appmsg">
-          <view class="weui-media-box__title">{{item.title}}
-            <view class="weui-badge" style="margin-left: 5px;">可借</view>
-          </view>
+          <view class="weui-media-box__title">{{item.title}}</view>
           <view class="weui-media-box__desc">{{item.author[0]}}</view>
           <view class="weui-media-box__desc">{{item.publisher}}</view>
           <view class='weui-media-box__desc'>索书号：TP/393/21-5</view>
