--- a/pages/features/features.wxss
+++ b/pages/features/features.wxss
@@ -10,3 +10,13 @@
   height: 100%;
   width: 100%;
 }
+.login-btn {
+  font-size: 13pt;
+  line-height: 85rpx;
+  height: 85rpx;
+  background: #e55c5c;
+  color: #fff;
+  text-align: center;
+  border-radius: 5px;
+  margin: 40rpx 3%;
+}
