logout功能丧心病狂的变态实现方法
。。。。整整一个晚上就折腾出来这么个玩意儿。。。

--- a/pages/error/loginerror.wxml
+++ b/pages/error/loginerror.wxml
@@ -11,8 +11,7 @@
         <view class="icon-box__desc">您的账号无法登录，请确保学号密码正确。也可能是教务系统关闭😞</view>
       </view>
     </view>
-    <button bindtap="goBack" class="weui-btn" type="default">返回重试</button>
-    <button bindtap="goIndex" class="weui-btn" type="primary">暂不登录</button>
+    <button bindtap="goBack" class="weui-btn" type="primary">返回重试</button>
   </view>
   <view class="weui-footer weui-footer_fixed-bottom">
     <view class="weui-footer__links">
