--- a/pages/bookSearch/bookInfo/bookList.wxml
+++ b/pages/bookSearch/bookInfo/bookList.wxml
@@ -1,34 +1,22 @@
-<!--pages/bookSearch/bookInfo/bookList.wxml-->
 <view class="page">
+  <view class="page__hd">
+    <view class="page__title">查询结果</view>
+    <view class="page__desc">我们为您找到了以下内容：</view>
+  </view>
   <view class="page__bd">
     <view class="weui-panel weui-panel_access">
       <view class="weui-panel__bd">
         <navigator url="" class="weui-media-box weui-media-box_appmsg" hover-class="weui-cell_active">
           <view class="weui-media-box__hd weui-media-box__hd_in-appmsg">
-            <image class="bookImg" src="https://img1.doubanio.com/mpic/s4293097.jpg" />
+            <image class="weui-media-box__thumb" src="/images/book2.png" />
           </view>
           <view class="weui-media-box__bd weui-media-box__bd_in-appmsg">
-            <view class="weui-media-box__title">白色的力量：柯文哲</view>
-            <view class="weui-badge" style="margin-left: 5px;">可借</view>
-            <view class="weui-media-box__desc">作者：柯文哲</view>
-            <view class="weui-media-box__desc">出版社：台湾出版社</view>
-            <view class="weui-media-box__desc">索书号：TP/393/21-5</view>
+            <view class="weui-media-box__title">标题一</view>
+            <view class="weui-media-box__desc">由各种物质组成的巨型球状天体，叫做星球。星球有一定的形状，有自己的运行轨道。</view>
           </view>
         </navigator>
-
-        <navigator url="" class="weui-media-box weui-media-box_appmsg" hover-class="weui-cell_active">
-          <view class="weui-media-box__hd weui-media-box__hd_in-appmsg">
-            <image class="bookImg" src="https://img1.doubanio.com/mpic/s4293099.jpg" />
-          </view>
-          <view class="weui-media-box__bd weui-media-box__bd_in-appmsg">
-            <view class="weui-media-box__title">海底捞你学不会</view>
-            <view class="weui-badge" style="margin-left: 5px;">可借</view>
-            <view class="weui-media-box__desc">作者：张三丰</view>
-            <view class="weui-media-box__desc">出版社：三联出版社</view>
-            <view class="weui-media-box__desc">索书号：TP/394221-5</view>
-          </view>
-        </navigator>
-
+      </view>
+      <view class="weui-panel__ft">
       </view>
     </view>
   </view>
