--- a/pages/bookSearch/bookInfo/bookInfo.wxml
+++ b/pages/bookSearch/bookInfo/bookInfo.wxml
@@ -23,7 +23,7 @@
           <view class="weui-media-box__title">索书号：{{item[0]}}</view>
           <view class="weui-media-box__desc">条码号：{{item[1]}}</view>
           <view class="weui-media-box__title">状态：
-            <view class="weui-badge" style="margin-left: 5px;">{{item[4]}}</view>
+            <view class="weui-badge" style="margin-left: 5px;" wx:if='{{item[4]!==""}}'>{{item[4]}}</view>
           </view>
         </view>
       </view>
@@ -48,7 +48,4 @@
 </text>
     </view>
   </view>
-  <loading hidden="true">
-    加载中...
-  </loading>
 </page>
