--- a/pages/error/notfound.wxml
+++ b/pages/error/notfound.wxml
@@ -1,4 +1,3 @@
-<!--pages/score/showScore/error.wxml-->
 <view class="page">
   <view class="page__hd">
     <view class="page__title"></view>
@@ -7,11 +6,14 @@
     <view class="icon-box">
       <icon type="info" size="93"></icon>
       <view class="icon-box__ctn">
-        <view class="icon-box__title">无法登录</view>
-        <view class="icon-box__desc">您的账号无法登录，请确保学号密码正确。也可能是教务系统关闭😞</view>
+        <view class="icon-box__title">没有找到</view>
+        <view class="icon-box__desc">您要找的这本图书貌似图书馆还没有馆藏😞</view>
       </view>
     </view>
-    <button bindtap="goBack" class="weui-btn" type="primary">返回重试</button>
+    <view class='tipPic'>
+      <image style='width:100%;' src="../../images/notfound.png" mode='widthFix'></image>
+    </view>
+    <button bindtap="goBack" class="weui-btn" type="primary">返回上页</button>
   </view>
   <view class="weui-footer weui-footer_fixed-bottom">
     <view class="weui-footer__links">
