😄图书查询所有功能实现，且基本满意

--- a/pages/bookSearch/bookInfo/bookDetail.wxml
+++ b/pages/bookSearch/bookInfo/bookDetail.wxml
@@ -1,17 +1,18 @@
+<!--pages/bookSearch/bookInfo/bookDetail.wxml-->
 <page>
   <view>
-    <view class="cover-container">
+    <view class="cover-container" wx:if="{{doubanStr.images.large}}">
       <image src="{{doubanStr.images.large}}">
       </image>
     </view>
     <view class="book-meta">
-      <view class="meta-info">
+      <view class="meta-info" wx:if="{{doubanStr.title}}">
         <text class="book-title">{{doubanStr.title}}</text>
         <text class="other-meta">作者：{{doubanStr.author[0]}}</text>
         <text class="other-meta">出版社：{{doubanStr.publisher}}</text>
         <text class="other-meta">出版日期：{{doubanStr.pubdate}}</text>
       </view>
-      <view class="range">
+      <view class="range" wx:if="{{doubanStr.rating.average}}">
         <text class="score">{{doubanStr.rating.average}}</text>
         <text class="viewers">{{doubanStr.rating.numRaters}}参与</text>
       </view>
@@ -33,19 +34,17 @@
         </view>
       </view>
     </view>
-    <view class="book-intro">
+    <view class="book-intro" wx:if="{{doubanStr.summary}}">
       <view class="intro-header">
         <text>简介</text>
       </view>
-      <text class="intro-content">{{doubanStr.summary}}
-</text>
+      <text class="intro-content">{{doubanStr.summary}}</text>
     </view>
-    <view class="book-intro">
+    <view class="book-intro" wx:if="{{doubanStr.suthor_intro}}">
       <view class="intro-header">
         <text>作者信息</text>
       </view>
-      <text class="intro-content">{{doubanStr.author_intro}}
-</text>
+      <text class="intro-content">{{doubanStr.author_intro}}</text>
     </view>
   </view>
 </page>
