实现了维持登录态的功能
使用setStoragr实现了维持登录态的功能，以后再也不怕每次重新打开微信后要重新登录了。

--- a/pages/error/notfound.wxml
+++ b/pages/error/notfound.wxml
@@ -11,7 +11,7 @@
       </view>
     </view>
     <view class='tipPic'>
-      <image style='width:100%;' src="../../images/notfound.png" mode='widthFix'></image>
+      <image class='tipImg' src="../../images/notfound.png" mode='widthFix'></image>
     </view>
     <button bindtap="goBack" class="weui-btn" type="primary">返回上页</button>
   </view>
