去除废弃页面&优化借阅状态的显示
去除了废弃掉的/pages./score/score相关页面，优化了所有图书详情页面的借阅状态的显示，可借为绿色，其他状态红色

--- a/pages/bookSearch/bookInfo/bookDetail.wxml
+++ b/pages/bookSearch/bookInfo/bookDetail.wxml
@@ -24,7 +24,8 @@
           <view class="weui-media-box__title">索书号：{{item[0]}}</view>
           <view class="weui-media-box__desc">条码号：{{item[1]}}</view>
           <view class="weui-media-box__title">状态：
-            <view class="weui-badge" style="margin-left: 5px;" wx:if='{{item[4]!==""}}'>{{item[4]}}</view>
+            <view class="weui-badge" style="margin-left: 5px;" wx:if='{{item[4]=="可借"}}'>{{item[4]}}</view>
+            <view class="weui-badge" style="margin-left: 5px;background-color:red;" wx:if='{{item[4]!=="可借"}}'>{{item[4]}}</view>
           </view>
         </view>
       </view>
