--- a/pages/error/queryerror.wxml
+++ b/pages/error/queryerror.wxml
@@ -13,11 +13,11 @@
     <button bindtap="goBack" class="weui-btn" type="default">登录重试</button>
     <button bindtap="goIndex" class="weui-btn" type="primary">取消查询</button>
   </view>
-  <view class="weui-footer weui-footer_fixed-bottom">
+    <view class="weui-footer">
     <view class="weui-footer__links">
-      <navigator url="" class="weui-footer__link">智慧校园</navigator>
-      <navigator url="" class="weui-footer__link">Airmole.</navigator>
+      <navigator url="/pages/features/about" class="weui-footer__link">Airmole.</navigator>
+      <navigator url="/pages/features/about" class="weui-footer__link">智慧校园</navigator>
     </view>
-    <view class="weui-footer__text">Copyright © 2017-2018 Airmole BKIEBox.</view>
+    <view class="weui-footer__text">Copyright © 2018 北京科技大学天津学院.</view>
   </view>
 </view>
