--- a/pages/calendar/calendar.wxml
+++ b/pages/calendar/calendar.wxml
@@ -1,14 +1,21 @@
 <view class='page'>
   <view class='setCenter'>
-  <text>\n</text>
+    <text>\n</text>
     <view class="weui-article__h2">今天是：{{time}}</view>
     <image src='https://airmole.cn/wechat/wxapp/images/17-18IIcalendar.jpg' mode='widthFix'></image>
   </view>
-  <view class="weui-cells__tips setCenter">{{BottomTip}}</view>
+  <!-- <view class="weui-cells__tips setCenter">{{BottomTip}}</view> -->
   <view class="weui-btn-area">
     <button plain='true' open-type="share" type="default" hover-class="other-button-hover">
       <image class="weui-btn shareIcon" src='/images/share.png'></image>
       分享校历给朋友
     </button>
+  </view>
+  <view class="weui-footer">
+    <view class="weui-footer__links">
+      <navigator url="/pages/features/about" class="weui-footer__link">Airmole.</navigator>
+      <navigator url="/pages/features/about" class="weui-footer__link">智慧校园</navigator>
+    </view>
+    <view class="weui-footer__text">Copyright © 2018 北京科技大学天津学院.</view>
   </view>
 </view>
