--- a/pages/classQuery/index.wxss
+++ b/pages/classQuery/index.wxss
@@ -44,3 +44,31 @@
   display: flex;
   align-items: center;
 }
+
+.remind-box {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding-bottom: 300rpx;
+}
+.remind-img {
+  width: 250rpx;
+  height: 250rpx;
+  padding-bottom: 25rpx;
+}
+.remind-text {
+  font-size: 12pt;
+  line-height: 150%;
+}
+.remind-btn {
+  margin-top: 20rpx;
+  font-size: 9pt;
+  padding: 5rpx 20rpx;
+  text-align: center;
+  background-color: #7acfa6;
+  border-radius: 3px; 
+  border-bottom: 2px solid #4fc08d;
+  color: #fff;
+}
