--- a/pages/score/showScore/showScore.wxml
+++ b/pages/score/showScore/showScore.wxml
@@ -1,15 +1,14 @@
 <!--pages/score/showScore/showScore.wxml-->
 <view class="page">
   <view class="page__hd">
-    <view class="page__title">加权平均分：{{jsonContent[1][0]}}</view>
-    <view class="page__desc">本程序首次查询可能较慢，加权平均分计算方法仅供参考，最终准确加权平均分请以导员计算为准</view>
+    <view class="page__title">成绩查询</view>
+    <view class="page__desc">本程序每次查询都会一次性查询您在校以来所有课程成绩记录，且不会保存数据记录。因此查询时间较长，请您耐心等待。查询完成后您的课程将按照最近时间顺序排序显示</view>
   </view>
   <view class="page__bd">
     <view class="weui-cells__title">您的各科成绩：</view>
     <view class="weui-cells weui-cells_after-title">
-      <view wx:for="{{jsonContent[0]}}" wx:key="ClassName" class="weui-cell">
-        <view class="weui-cell__bd">{{item.className}}
-          <span class="page__desc">{{item.studyScore}}</span>
+      <view wx:for="{{jsonContent}}" wx:key="ClassName" class="weui-cell">
+        <view class="weui-cell__bd">{{item.class}}
         </view>
         <view class="weui-cell__ft" style='color:#000000;'>{{item.score}}</view>
       </view>
