--- a/pages/welcome/welcome.wxml
+++ b/pages/welcome/welcome.wxml
@@ -4,14 +4,18 @@
     <view class="page-section">
       <view class="page-body-info">
         <view class="page-body-title">欢迎你，同学：</view>
-        <block wx:if="{{hasUserInfo === false}}">
+        <view>
           <text class="page-body-text"></text>
           <text class="page-body-text"></text>
-        </block>
-        <block wx:if="{{hasUserInfo === true}}">
-          <image class="userinfo-avatar" src="{{userInfo.avatarUrl}}"></image>
-          <text class="userinfo-nickname">{{userInfo.nickName}}</text>
-        </block>
+        </view>
+        <view>
+          <view class="userinfo-avatar">
+            <open-data type="userAvatarUrl"></open-data>
+          </view>
+          <view class='userinfo-nickname'>
+            <open-data type="userNickName"></open-data>
+          </view>
+        </view>
       </view>
       <view class="weui-cell">
         <view class="weui-cell__bd">姓名：</view>
